--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_NAME=Line Provider Service
 DEBUG=True
-REDIS_URL=redis://redis:6379/0
+REDIS_URL=redis://127.0.0.1:6378/0
 EVENT_EXTRA_TTL=604800
 CALLBACK_TTL=86400
